# LunarStrike

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  config.yml  docker-compose.yml  dockerfile
src/: config_loader.cpp  config_loader.h  effects.cpp  effects.h  main.cpp  midi_handler.cpp  midi_handler.h  portaudio_output.cpp  portaudio_output.h  synth_engine.cpp  synth_engine.h
